
version 1.4 (10/19/09)
	- agendaWeek and agendaDay views !!!
	- added some options for agenda views:
		- allDaySlot
		- allDayText
		- firstHour
		- slotMinutes
		- defaultEventMinutes
		- axisFormat
	- modified some existing options/triggers to work with agenda views:
		- dragOpacity and timeFormat can now accept a "View Hash" (a new concept)
		- dayClick now has an allDay parameter
		- eventDrop now has an an allDay parameter
		  (this will affect those who use revertFunc, adjust parameter list)
	- added 'prevYear' and 'nextYear' for buttons in header
	- minor change for theme users, ui-state-hover not applied to active/inactive buttons
	- added event-color-changing example in docs

version 1.3.2 (10/13/09)
	- Bugfixes (please upgrade from 1.3.1!)
		- squashed potential infinite loop when addMonths and addDays
		  is called with an invalid date
		- $.fullCalendar.parseDate() now correctly parses IETF format
		- when switching views, the 'today' button sticks inactive, fixed
	- gotoDate now can accept a single Date argument
	- documentation for changes in 1.3.1 and 1.3.2 now on website

version 1.3.1 (9/30/09)
	- Important Bugfixes (please upgrade from 1.3!)
		- When current date was late in the month, for long months, and prev/next buttons
		  were clicked in month-view, some months would be skipped/repeated
		- In certain time zones, daylight savings time would cause certain days
		  to be misnumbered in month-view
	- Subtle change in way week interval is chosen when switching from month to basicWeek/basicDay view
	- Added 'allDayDefault' option
	- Added 'changeView' and 'render' methods

version 1.3 (9/21/09)
	- different 'views': month/basicWeek/basicDay
	- more flexible 'header' system for buttons
	- themable by jQuery UI themes
	- resizable events (require jQuery UI resizable plugin)
	- rescoped & rewritten CSS, enhanced default look
	- cleaner css & rendering techniques for right-to-left